# CurrencyMobile

./: README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/src/androidTest/java/com/yidatong/debutwork/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: testJs.html  ztcontainer.css  ztloader.js
app/src/main/cpp/: CMakeLists.txt  MyServiceJNI.cpp  MyServiceJNI.h
app/src/main/java/com/yidatong/debutwork/: ExceptionCrashHandler.java  MainActivity.java  MyApp.java  SimpleLogActivity.java  TransitionParameters.java
app/src/main/java/com/yidatong/debutwork/Tools/: AppCanDir.java  MyWakeLock.java
app/src/main/res/layout/: activity_log.xml  activity_main.xml  activity_simple_log.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-v31/: styles.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/yidatong/debutwork/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
